<resources>
    <string name="app_name">NoFAW</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone number</string>
    <string name="farmer">Farmer</string>
    <string name="government_agent">Government Agent</string>
    <string name="password">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Reports</string>
    <string name="report">Report</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="prevention">Prevention</string>
    <string name="treatment">Treatment</string>
    <string name="title_activity_maps">Map</string>
    <string name="affected_areas">Affected Areas</string>
</resources>
