<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/gradient"
    tools:context="com.innov8.nofaw.Activities.SignUpActivity">


    <ImageView
        android:src="@mipmap/nofawlogo"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="100dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/farmer"
            android:checked="true"
            android:textColor="#fff"
            android:buttonTint="#fff"
            android:layout_width="wrap_content"
            android:paddingRight="16dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:textColor="#fff"
            android:buttonTint="#fff"
            android:text="@string/government_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/farmer"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:id="@+id/name"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/eddit"
            android:layout_height="50dp" />
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:paddingLeft="16dp"
            android:id="@+id/phone_num"
            android:layout_marginTop="16dp"
            android:background="@drawable/eddit"
            android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/govt_agent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/govt_name"
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/eddit"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/govt_email"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/eddit"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/govt_password"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/eddit"
            android:layout_height="50dp" />
    </LinearLayout>

    <com.innov8.nofaw.CustomClasses.FontTextView
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textColor="#fff"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit_login"
        style="@style/SpinKitView.ChasingDots"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:SpinKit_Color="#fff" />
    </LinearLayout>
</RelativeLayout>
