<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <ImageView
        android:src="@mipmap/nofawlogo"
        android:layout_width="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginLeft="-16dp"
        android:layout_height="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="30dp"
                android:layout_height="wrap_content">
                <ImageView
                    app:srcCompat="@drawable/ic_home_black_24dp"
                    android:layout_width="28dp"
                    android:tint="#fff"
                    android:layout_height="28dp" />
                <com.innov8.nofaw.CustomClasses.FontTextView
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:paddingLeft="16dp"
                    android:text="@string/home"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">
                <ImageView
                    app:srcCompat="@drawable/ic_report_black_24dp"
                    android:layout_width="28dp"
                    android:tint="#fff"
                    android:layout_height="28dp" />

                <com.innov8.nofaw.CustomClasses.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/reports"
                    android:textColor="#fff"
                    android:textSize="21sp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">
                <ImageView
                    app:srcCompat="@drawable/ic_map_black_24dp"
                    android:layout_width="28dp"
                    android:tint="#fff"
                    android:layout_height="28dp" />

                <com.innov8.nofaw.CustomClasses.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/map"
                    android:textColor="#fff"
                    android:textSize="21sp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">
                <ImageView
                    app:srcCompat="@drawable/ic_account_circle_black_24dp"
                    android:layout_width="28dp"
                    android:tint="#fff"
                    android:layout_height="28dp" />

                <com.innov8.nofaw.CustomClasses.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/profile"
                    android:textColor="#fff"
                    android:textSize="21sp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingBottom="30dp"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content">
                <ImageView
                    app:srcCompat="@drawable/ic_settings_black_24dp"
                    android:layout_width="28dp"
                    android:tint="#fff"
                    android:layout_height="28dp" />

                <com.innov8.nofaw.CustomClasses.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/settings"
                    android:textColor="#fff"
                    android:textSize="21sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>