<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gradient"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.innov8.nofaw.Activities.FarmerMainActivity">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            tools:context="com.innov8.nofaw.Activities.FarmerMainActivity">

            <android.support.v7.widget.CardView
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/prevention"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="Prevent the invasion of the fall armyworm from happening in the first place by using various methods." />

                    </LinearLayout>

                    <com.innov8.nofaw.CustomClasses.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/card_button"
                        android:paddingBottom="12dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="How?"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="Identification"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="Correctly identify pests by looking at various physical traits." />

                    </LinearLayout>

                    <com.innov8.nofaw.CustomClasses.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/card_button"
                        android:paddingBottom="12dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="How?"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/treatment"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="In case of an FAW occurence, or even worse, damage of crops,  it is essential to treat it." />

                    </LinearLayout>

                    <com.innov8.nofaw.CustomClasses.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/card_button"
                        android:paddingBottom="12dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="In which ways?"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/report"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <com.innov8.nofaw.CustomClasses.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="Let the proper authorities know so that you may receive help or alert nearby farmers." />

                    </LinearLayout>

                    <com.innov8.nofaw.CustomClasses.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/card_button"
                        android:paddingBottom="12dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="Send Report"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
